basic logical structure is done

--- a/getpost/templates/getpost/main.html
+++ b/getpost/templates/getpost/main.html
@@ -12,6 +12,8 @@
     <li><p><a href="classy">Classy guessing game</p></li>
     <li><p><a href="bounce">Review redirect</p></li>
     <li><p><a href="awesome">Awesome guessing game</p></li>
+
+    <li><p><a href="ev">ev</p></li>
 </ul>
 </body>
 </html>
