configure email sending with form data

--- a/getpost/templates/getpost/ev_thank_you.html
+++ b/getpost/templates/getpost/ev_thank_you.html
@@ -1,5 +1,5 @@
 html5.html<p>HTML5 field types...</p>
 <p>
-Thank you for your input.
+Thank you for your input. We have sent the email with the following data:
 </p>
 {{ data|safe }}
